--- a/Es.Riam.Gnoss.FirstDataLoad/Properties/Resources.resx
+++ b/Es.Riam.Gnoss.FirstDataLoad/Properties/Resources.resx
@@ -118,13 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Carga_BD_ACID_facetaObjetoConocimiento" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="carga_bd_acid_facetaobjetoconocimiento" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\scripts\carga_bd_acid_facetaobjetoconocimiento.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="Carga_BD_ACID_PAIS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="carga_bd_acid_pais" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\scripts\carga_bd_acid_pais.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="Carga_BD_ACID_Provincia" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="carga_bd_acid_provincia" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\scripts\carga_bd_acid_provincia.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
