--- a/Es.Riam.Gnoss.Recursos/Properties/Resources.resx
+++ b/Es.Riam.Gnoss.Recursos/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="dc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="DC" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DC.owl;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="en" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -172,10 +172,13 @@
   <data name="it" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\it.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="curriculum" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Curriculum" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Curriculum.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="es" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\es.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="ca_valencia" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ca_valencia.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
